@@ -1,5 +1,6 @@
 2.6 (Next version)
 
+o Cope with files with no /MediaBox at all
 o Write IDs as Hexadecimal strings
 o Replace Stream/Genlex and other deprecations for OCaml 5
 o Allows malformed numbers --1, --2.5 etc.
